--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "keywords": [
     "silverstripe",
     "flatdesign",
-    "admin"
+    "admin",
     "admin experience"
   ],
   "type": "silverstripe-module",
