--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   ],
   "type": "silverstripe-module",
   "require": {
-    "silverstripe/framework": "^3.2"
+    "silverstripe/framework": "3.x@stable"
   },
   "extra": {
     "installer-name": "flatadmin"
